Projeto Ferrari atualizado 18/09

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         </button>
 
-        <div class="menu logged">
+        <div class="menu ">
 
             <nav>
                 <button type="button" id="btn-close">
